Fixed non serializable issue

--- a/Education.html
+++ b/Education.html
@@ -54,7 +54,7 @@
 
   <!-- Main Content -->
 
-  <div class="w-85 p-3" style="background-color: #383b53;" justify-content:centre>
+  <div class="d-flex w-85 p-3 justify-content-centre" style="background-color: #383b53;">
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-8">
