--- a/Other Interests.html
+++ b/Other Interests.html
@@ -53,7 +53,7 @@
 
   <!-- Main Content -->
 
-  <div class="w-85 p-3" style="background-color: #383b53;" justify-content:centre>
+  <div class="d-flex w-85 p-3 justify-content-centre" style="background-color: #383b53;">
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-8">
@@ -136,19 +136,19 @@
         <div class="d-flex justify-content-end">
 
           <div class="d-inline-flex p-2">
-            <a class="text-muted" href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+            <a class="text-muted" href="https://www.facebook.com/"><span style="font-size: 40px;"><i class="fab fa-facebook-square"></i></span></a>
           </div>
 
           <div class="d-inline-flex p-2">
-            <a class="text-muted" href="https://www.twitter.com/"><i class="fab fa-twitter-square"></i></a>
+            <a class="text-muted" href="https://www.twitter.com/"><span style="font-size: 40px;"><i class="fab fa-twitter-square"></i></span></a>
           </div>
 
           <div class="d-inline-flex p-2">
-            <a class="text-muted" href="https://gb.linkedin.com/"><i class="fab fa-linkedin"></i></a>
+            <a class="text-muted" href="https://gb.linkedin.com/"><span style="font-size: 40px;"><i class="fab fa-linkedin"></i></span></a>
           </div>
 
           <div class="d-inline-flex p-2">
-            <a class="text-muted" href="https://www.reddit.com/"><i class="fab fa-reddit-square"></i></a>
+            <a class="text-muted" href="https://www.reddit.com/"><span style="font-size: 40px;"><i class="fab fa-reddit-square"></i></span></a>
           </div>
 
         </div>
